projeto Giovani Lovatto Allegretti conversor do real

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,12 @@
+.fatecitu{
+    font-size: large;
+}
+
+.cabecalho{
+font-size: x-large;
+color: #161616;
+}
+
 .quadro{
     text-align: center;
     margin: 50px;
@@ -15,10 +24,17 @@
 
 .fonteform{
     color:white;
-    font-size: 15px;
+    font-size: 20px;
 }
 
 .valorcss{
+    color: black;
+    border: 15px;
+    border-radius: 25px;
+    margin-bottom: 10px;
+}
+
+.resultadocss{
     color: black;
     border: 15px;
     border-radius: 25px;
@@ -29,4 +45,5 @@
     color: black;
     border: 15px;
     border-radius: 25px;
+    font-size: large;
 }
